规范目录 && README.md

--- a/demo.html
+++ b/demo.html
@@ -58,7 +58,7 @@
             margin-left: 20px;
         }
     </style>
-    <link rel="stylesheet" type="text/css" href="catalogGenerator.css">
+    <link rel="stylesheet" type="text/css" href="catalog.css">
 </head>
 <body>
 
@@ -458,8 +458,9 @@
 </ul>
 
 
-<script type="text/javascript" src="jquery-2.1.4.min.js"></script>
-<script type="text/javascript" src="catalogGenerator.js"></script>
+<script type="text/javascript" src="vendor/jquery-2.1.4.min.js"></script>
+<script type="text/javascript" src="catalog.js"></script>
+
 <script type="text/javascript">
 // 获取文章中的标题元素数组
 var blogContentHeader = $("#blogContent :header").prev("span[id^='OSC_h']");
